--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #42A5F5;
+  background: #a5c1d8;
 
 }
 
@@ -41,11 +41,9 @@ body {
 
 #todolist {
   border: 1px solid black; 
-  display: flex;
   align-items: stretch; 
-  justify-content: flex-start;
   padding:15px;
-  text-align: center;
+  text-align:left;
 }
 
 #footer {
