--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background: #a5c1d8;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
 
 }
 
@@ -14,13 +16,6 @@ body {
   display: block;
 }
 
-
-
-
-
-
-
-
 #todolistadder {
   border: 1px solid blue;
   padding:15px;
@@ -30,16 +25,10 @@ body {
   position: relative;
 }
 
-/* #taskinput {
-  width: 75%;
+#todolistadder *::placeholder {
+
+  color: green;
 }
-
-#markbutton {
-  width: 15%;
-} */
-
-
-
 
 #todolist {
   border: 1px solid black; 
@@ -47,7 +36,8 @@ body {
   padding:15px;
   text-align:left;
   position: relative;
-
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 #footer {
